chore: remove health check, regenerate docs
